<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eigen_typekit</name>
  <version>2.9.1</version>
  <license>LGPL</license>
  <description>An Orocos typekit for Eigen types.</description>
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>

  <author>Ruben Smits</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>boost</depend> -->
  <depend>rtt</depend>
  <depend>ocl</depend>
  <depend>eigen</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

